Fix card Design and low-pixel screen spacing issue

--- a/zubio/static/css/global.css
+++ b/zubio/static/css/global.css
@@ -5,6 +5,7 @@ html{
 body{
 	font-family: "latoregular";
 	margin-top: 80px;
+	background: #fdfdfd;
 }
 
 /* ==== Colors ==== */
