--- a/zubio/static/css/styles.css
+++ b/zubio/static/css/styles.css
@@ -16,6 +16,7 @@
 .left-col{
 	float: left;
 	width: 75%;
+	padding: 10px;
 }
 
 .right-col{
@@ -34,14 +35,14 @@
 	background: #fff;
 	border-radius: 3px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.3);
-	height: 300px;
+	height: 280px;
 	overflow: hidden;
 	margin-bottom: 20px;
 }
 
 .product-image{
 	width: 100%;
-	height: 200px;
+	height: 180px;
 	background-color: #ccc;
 	background-repeat: no-repeat;
 	background-position: top center;
@@ -66,7 +67,7 @@
 
 .product h3 a{
 	font-family: "montserratregular";
-	font-size: 16px;
+	font-size: 14px;
 	color: #424242;
 
 }
